--- a/app/src/main/res/layout/activity_non_group_member.xml
+++ b/app/src/main/res/layout/activity_non_group_member.xml
@@ -27,85 +27,63 @@
         android:id="@+id/study_name_text"
         android:layout_width="240dp"
         android:layout_height="27dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="20dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/study_leader_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/study_name"
         app:layout_constraintTop_toBottomOf="@+id/non_group_indicator" />
 
     <TextView
         android:id="@+id/study_recreuitment_text"
         android:layout_width="240dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
+        android:layout_height="23dp"
+        android:layout_marginTop="28dp"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/stduy_recruitment"
+        app:layout_constraintStart_toStartOf="@+id/study_total_text"
         app:layout_constraintTop_toBottomOf="@+id/study_total_text" />
 
     <TextView
         android:id="@+id/study_leader_text"
         android:layout_width="240dp"
         android:layout_height="27dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/study_field_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/study_leader"
+        app:layout_constraintStart_toStartOf="@+id/study_name_text"
         app:layout_constraintTop_toBottomOf="@+id/study_name_text" />
 
     <TextView
         android:id="@+id/study_field_text"
         android:layout_width="240dp"
         android:layout_height="27dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="32dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/study_total_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/study_field"
+        app:layout_constraintStart_toStartOf="@+id/study_leader_text"
         app:layout_constraintTop_toBottomOf="@+id/study_leader_text" />
 
     <TextView
         android:id="@+id/study_field"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="99dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/non_group_study_field"
-        android:textSize="25sp"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toStartOf="@+id/study_field_text"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/study_leader" />
 
     <TextView
         android:id="@+id/study_total"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/non_group_study_total_number_of_people"
-        android:textSize="25sp"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/stduy_recruitment"
-        app:layout_constraintEnd_toStartOf="@+id/study_total_text"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/study_field" />
 
@@ -113,29 +91,25 @@
         android:id="@+id/stduy_recruitment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/non_group_stduy_recreuitment"
-        android:textSize="25sp"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/study_recreuitment_text"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/study_total" />
 
     <TextView
         android:id="@+id/study_leader"
-        android:layout_width="wrap_content"
+        android:layout_width="99dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/non_group_study_leader"
-        android:textSize="25sp"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toStartOf="@+id/study_leader_text"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/study_name" />
 
@@ -143,38 +117,33 @@
         android:id="@+id/study_total_text"
         android:layout_width="240dp"
         android:layout_height="27dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="24dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/study_recreuitment_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/study_total"
+        app:layout_constraintStart_toStartOf="@+id/study_field_text"
         app:layout_constraintTop_toBottomOf="@+id/study_field_text" />
 
     <TextView
         android:id="@+id/study_name"
-        android:layout_width="wrap_content"
+        android:layout_width="99dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
         android:text="@string/non_group_study_name"
         android:textColor="@color/black"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/study_leader"
-        app:layout_constraintEnd_toStartOf="@+id/study_name_text"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/non_group_indicator" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="304dp"
-        android:layout_height="221dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginLeft="53dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="54dp"
-        android:layout_marginRight="54dp"
+        android:layout_width="wrap_content"
+        android:layout_height="261dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nonGruopToolbar">
@@ -185,6 +154,7 @@
         android:id="@+id/non_group_indicator"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginTop="8dp"
         app:ci_drawable="@drawable/black_radius"
         app:ci_height="7dp"
         app:ci_margin="4dp"
