--- a/app/src/main/res/layout/activity_study_search_recycle_item.xml
+++ b/app/src/main/res/layout/activity_study_search_recycle_item.xml
@@ -82,9 +82,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
+                android:layout_marginEnd="109dp"
+                android:layout_marginRight="109dp"
                 android:text="TextView"
-                app:layout_constraintTop_toBottomOf="@+id/studySearchImage"
-                tools:layout_editor_absoluteX="244dp" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/studySearchImage" />
 
             <TextView
                 android:id="@+id/field_text"
