feat(#28) : refact, new activity

--- a/app/src/main/res/layout/activity_groupmanagement_createstudy.xml
+++ b/app/src/main/res/layout/activity_groupmanagement_createstudy.xml
@@ -10,179 +10,176 @@
         android:id="@+id/groupLeaderCreateStudyToolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:backgroundTint="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:background="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/group_leader_create_study"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="20dp" />
     </com.google.android.material.appbar.MaterialToolbar>
 
-    <androidx.viewpager.widget.ViewPager
-
-        android:id="@+id/groupLeaderViewPager"
-        android:layout_width="323dp"
-        android:layout_height="163dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+    <View
+        android:id="@+id/groupLeaderCreateView"
+        android:layout_width="0dp"
+        android:layout_height="231dp"
+        android:background="#dadada"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/groupLeaderCreateStudyToolbar">
+    </View>
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/groupLeaderCreateStudyTitle"
+        android:layout_width="176dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:text="스터디 01"
+        android:textColor="@color/colorPrimary"
+        android:textSize="34dp"
+        android:textStyle="bold"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="@+id/groupLeaderCreateView"
+        app:layout_constraintTop_toBottomOf="@+id/groupLeaderCreateStudyToolbar">
 
-    </androidx.viewpager.widget.ViewPager>
+    </com.google.android.material.textview.MaterialTextView>
 
-    <TextView
-        android:id="@+id/groupLeaderStudyNameTitle"
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/groupLeaderCreateStudyMember"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:text="스터디 명"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/groupLeaderStudyName"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/groupLeaderViewPager"
-        app:layout_constraintTop_toBottomOf="@+id/groupLeaderViewPager" />
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="40dp"
+        android:gravity="center"
+        android:text="그룹원"
+        android:textColor="@color/black"
+        android:textSize="17dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/groupLeaderCreateView">
 
-    <EditText
-        android:id="@+id/groupLeaderStudyName"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="104dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:hint="스터디명을 입력해주세요"
-        android:inputType="textPersonName"
-        android:textSize="20dp"
+    </com.google.android.material.textview.MaterialTextView>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/groupLeaderCreateStudyLocationView"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="120dp"
+        android:background="@color/colorGray"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/groupLeaderCreateStudyMember">
+
+    </de.hdodenhof.circleimageview.CircleImageView>
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/groupLeaderCreateStudyLocation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
+        android:hint="장소"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groupLeaderCreateStudyLocationView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/groupLeaderStudyNameTitle"
-        app:layout_constraintTop_toBottomOf="@+id/groupLeaderViewPager" />
-
-    <TextView
-        android:id="@+id/groupLeaderNameTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:text="스터디 장"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/groupLeaderName"
-        app:layout_constraintStart_toStartOf="@+id/groupLeaderStudyNameTitle"
-        app:layout_constraintTop_toBottomOf="@+id/groupLeaderStudyNameTitle" />
-
-    <EditText
-        android:id="@+id/groupLeaderName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:hint="스터디장을 입력해주세요"
-        android:inputType="textPersonName"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/groupLeaderNameTitle"
-        app:layout_constraintTop_toBottomOf="@+id/groupLeaderStudyName" />
-
-    <TextView
-        android:id="@+id/groupLeaderFieldTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="분야"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/groupLeaderNameTitle"
-        app:layout_constraintStart_toStartOf="@+id/groupLeaderNameTitle"
-        app:layout_constraintTop_toBottomOf="@+id/groupLeaderNameTitle" />
-
-    <androidx.appcompat.widget.AppCompatSpinner
-        android:id="@+id/groupLeaderField"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.794"
-        app:layout_constraintStart_toEndOf="@+id/groupLeaderFieldTitle"
-        app:layout_constraintTop_toBottomOf="@+id/groupLeaderName" />
-
-    <TextView
-        android:id="@+id/groupLeaderTotalMemberTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="총 인원"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/groupLeaderFieldTitle"
-        app:layout_constraintStart_toStartOf="@+id/groupLeaderFieldTitle"
-        app:layout_constraintTop_toBottomOf="@+id/groupLeaderFieldTitle" />
-
-    <EditText
-        android:id="@+id/groupLeaderTotalMember"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:hint="7명"
-        android:inputType="number"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/groupLeaderRecruitMember"
-        app:layout_constraintEnd_toEndOf="@+id/groupLeaderField"
-        app:layout_constraintStart_toStartOf="@+id/groupLeaderField" />
-
-    <TextView
-        android:id="@+id/groupLeaderRecruitMemberTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="모집 인원"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/groupLeaderTotalMemberTitle"
-        app:layout_constraintStart_toStartOf="@+id/groupLeaderTotalMemberTitle"
-        app:layout_constraintTop_toBottomOf="@+id/groupLeaderTotalMemberTitle" />
-
-    <EditText
-        android:id="@+id/groupLeaderRecruitMember"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="88dp"
-        android:hint="2명"
-        android:inputType="number"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/groupLeaderTotalMember"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/groupLeaderTotalMember" />
+        app:layout_constraintStart_toEndOf="@+id/groupLeaderCreateStudyLocationView">
 
+    </com.google.android.material.textfield.TextInputEditText>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/groupLeaderCreateStudyDateView"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="32dp"
+        android:background="@color/colorGray"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/groupLeaderCreateStudyLocationView">
+
+    </de.hdodenhof.circleimageview.CircleImageView>
+
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/groupLeaderCreateStudyDate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
+        android:hint="날짜"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groupLeaderCreateStudyDateView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/groupLeaderCreateStudyDateView">
+    </com.google.android.material.textfield.TextInputEditText>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/groupLeaderCreateStudyTimeView"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="32dp"
+        android:background="@color/colorGray"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/groupLeaderCreateStudyDateView">
+
+    </de.hdodenhof.circleimageview.CircleImageView>
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/groupLeaderCreateStudyTime"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
+        android:hint="시간"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groupLeaderCreateStudyTimeView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/groupLeaderCreateStudyTimeView">
+    </com.google.android.material.textfield.TextInputEditText>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/groupLeaderCreateStudyDescriptionView"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="32dp"
+        android:background="@color/colorGray"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/groupLeaderCreateStudyTimeView">
+
+    </de.hdodenhof.circleimageview.CircleImageView>
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/groupLeaderCreateStudyDescription"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
+        android:hint="내용"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groupLeaderCreateStudyDescriptionView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/groupLeaderCreateStudyDescriptionView">
+    </com.google.android.material.textfield.TextInputEditText>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
