--- a/app/src/main/res/drawable/activity_myinformation_greycircle.xml
+++ b/app/src/main/res/drawable/activity_myinformation_greycircle.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#808080" />
+    <solid android:color="@color/colorGray" />
     <stroke
         android:width="6dp"
-        android:color="#808080"
+        android:color="@color/colorGray"
         android:dashGap="1dp"
         android:dashWidth="47dp" />
     <gradient
-        android:endColor="#808080"
-        android:startColor="#808080" />
+        android:endColor="@color/colorGray"
+        android:startColor="@color/colorGray" />
     <padding
         android:bottom="9dp"
         android:left="9dp"
