--- a/app/src/main/res/layout/activity_non_group_fragment_three.xml
+++ b/app/src/main/res/layout/activity_non_group_fragment_three.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.wisestudy.nongroup.activity.NonGroupActivity"
+    tools:context="com.wisestudy.nongroup.activity.NonGroupUserDetail"
     >
 
     <ImageView
