--- a/app/src/main/res/layout/activity_non_group_member.xml
+++ b/app/src/main/res/layout/activity_non_group_member.xml
@@ -4,166 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/nonGruopToolbar"
+
+    <View
+        android:id="@+id/nonGroupUserDetail"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/non_group_management"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
-    </com.google.android.material.appbar.MaterialToolbar>
-
-    <TextView
-        android:id="@+id/study_name_text"
-        android:layout_width="240dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/non_group_indicator" />
-
-    <TextView
-        android:id="@+id/study_recreuitment_text"
-        android:layout_width="240dp"
-        android:layout_height="23dp"
-        android:layout_marginTop="28dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/study_total_text"
-        app:layout_constraintTop_toBottomOf="@+id/study_total_text" />
-
-    <TextView
-        android:id="@+id/study_leader_text"
-        android:layout_width="240dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="20dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/study_name_text"
-        app:layout_constraintTop_toBottomOf="@+id/study_name_text" />
-
-    <TextView
-        android:id="@+id/study_field_text"
-        android:layout_width="240dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="32dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/study_leader_text"
-        app:layout_constraintTop_toBottomOf="@+id/study_leader_text" />
-
-    <TextView
-        android:id="@+id/study_field"
-        android:layout_width="99dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/non_group_study_field"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/study_leader" />
-
-    <TextView
-        android:id="@+id/study_total"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/non_group_study_total_number_of_people"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/study_field" />
-
-    <TextView
-        android:id="@+id/stduy_recruitment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/non_group_stduy_recreuitment"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/study_total" />
-
-    <TextView
-        android:id="@+id/study_leader"
-        android:layout_width="99dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/non_group_study_leader"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/study_name" />
-
-    <TextView
-        android:id="@+id/study_total_text"
-        android:layout_width="240dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="24dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/study_field_text"
-        app:layout_constraintTop_toBottomOf="@+id/study_field_text" />
-
-    <TextView
-        android:id="@+id/study_name"
-        android:layout_width="99dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="24dp"
-        android:text="@string/non_group_study_name"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/non_group_indicator" />
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="wrap_content"
-        android:layout_height="261dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_height="270dp"
+        android:background="#dadada"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nonGruopToolbar">
+        app:layout_constraintTop_toBottomOf="@+id/groupLeaderDetailToolBar">
+    </View>
 
-    </androidx.viewpager.widget.ViewPager>
 
-    <me.relex.circleindicator.CircleIndicator
-        android:id="@+id/non_group_indicator"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        app:ci_drawable="@drawable/black_radius"
-        app:ci_height="7dp"
-        app:ci_margin="4dp"
-        app:ci_width="7dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager">
-
-    </me.relex.circleindicator.CircleIndicator>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
